--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
       <div class="head">
         HELLO THERE I'M <span class="dojeto">DOJETO ~</span>
       </div>
-      <nav>
+      <nav class="navbar v-nav">
         <a href="#" class="home">Home</a>
         <a href="#" class="about">About</a>
         <a href="#" class="myresume">My Resume</a>
         <a href="#" class="contact">Contact Me</a>
       </nav>
+      <div class="burger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
       <div class="content">
         <div class="image">
           <img src="Dojeto.jpg" alt="" />
@@ -30,5 +35,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
