--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="preloader"></div>
     <div class="Wrapper">
       <div class="head">
         HELLO THERE I'M <span class="dojeto">DOJETO ~</span>
@@ -30,7 +31,7 @@
             <button class="btn-1">About Me!</button
             ><button class="btn-2">Contact Me</button
             ><button class="btn-3">My Resume</button>
-            <button class="btn-3">Soon ~</button>
+            <button class="btn-4">Soon ~</button>
           </div>
         </div>
       </div>
