--- a/index.html
+++ b/index.html
@@ -4,38 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dojeto ~</title>
+    <title>Dojeto~</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="preloader"></div>
-    <div class="Wrapper">
-      <div class="head">
-        HELLO THERE I'M <span class="dojeto">DOJETO ~</span>
+    <div class="container">
+      <div class="sidebar">
+        <h1>HELLO THERE I'M <span class="Dojeto">DOJETO ~</span></h1>
       </div>
-      <nav class="navbar v-nav">
-        <a href="#" class="home">Home</a>
-        <a href="#" class="about">About</a>
-        <a href="#" class="myresume">My Resume</a>
-        <a href="#" class="contact">Contact Me</a>
+      <nav class="navbar">
+        <ul>
+          <li>Home</li>
+          <li>About Me</li>
+          <li>My Resume</li>
+          <li>Contact Me</li>
+        </ul>
       </nav>
       <div class="burger">
         <div class="line"></div>
         <div class="line"></div>
         <div class="line"></div>
       </div>
-      <div class="content">
-        <div class="image">
-          <img src="Dojeto.jpg" alt="" />
-          <div class="btn">
-            <button class="btn-1">About Me!</button
-            ><button class="btn-2">Contact Me</button
-            ><button class="btn-3">My Resume</button>
-            <button class="btn-4">Soon ~</button>
+      <div class="lowwer">
+        <div class="left">
+            <div class="card">
+                <div class="card">
+                    <div class="card__content">
+          <div class="img">
+            <img src="https://i.ibb.co/ByPGjTm/Dojeto.jpg" alt="Dojeto" />
           </div>
         </div>
-      </div>
+        </div>
+        </div>
     </div>
-    <script src="script.js"></script>
+        <div class="right">
+            <div class="btn">
+                <div class="btn-1 pad mar"><button>About me</button></div>
+                <div class="btn-2 pad"><button>My Resume</button></div>
+                <div class="btn-3 pad"><button>Contact Me</button></div>
+                <div class="btn-4 pad"><button>Soon</button></div>
+            </div>
+        </div>
+</div>
+<script src="script.js"></script>
   </body>
 </html>
