--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="sidebar">
         <h1>HELLO THERE I'M <span class="Dojeto">DOJETO ~</span></h1>
       </div>
-      <nav class="navbar">
+      <nav class="navbar v-nav">
         <ul>
           <li>Home</li>
           <li>About Me</li>
