--- a/index.html
+++ b/index.html
@@ -47,5 +47,13 @@
         </div>
 </div>
 <script src="script.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QYFMRH4SSG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QYFMRH4SSG');
+</script>      
   </body>
 </html>
